# shaula

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  DEV.md  LICENSE  PLAN.MD  PLAN_WAYLAND.md  PRODUCT.md  README.md  STATE.md  build.zig  dev  leer.md  meson.build  meson_options.txt  patch_main.sh  patch_overlay_discard.py  patch_script.py  patch_write_area_dry_run_json.py  scratch_test  scratch_test.c
scripts/qa/: README.md  assert-capabilities-consistency.sh  assert-capture-content-validity.sh  assert-capture-result-schema.sh  assert-command-compatibility.sh  assert-daemon-state-machine.sh  assert-daemon-status-ipc-truth.sh  assert-default-output-path.sh  assert-exit-code-mapping.sh  assert-history-topn.sh  assert-install-contract.sh  assert-no-runtime-stub.sh  assert-noctalia-actions.sh  assert-noctalia-capture-with-panel-hide.sh  assert-overlay-base-selection.sh  assert-overlay-geometry-fixtures.sh  assert-overlay-helper-interactive.sh  assert-port-command-compatibility.sh  assert-preflight-schema.sh  assert-release-archive.sh  assert-release-contract.sh  assert-shell-artifact-guard.sh  assert_png_not_stub_signature.py  assert_png_not_stub_signature.sh  benchmark-capture-completion.sh  benchmark-daemon-idle.sh  benchmark-overlay-first-paint.sh  benchmark-overlay-strategies.sh  benchmark-plugin-overhead.sh  check-zig-version.sh  fake_runtime_capture_helper.c  fake_runtime_capture_helper.py  fake_runtime_capture_helper.sh  fake_runtime_capture_helper.zig  manual-suite-warning.sh  meson.build  preflight-repo-structure.sh  preflight-wayland-niri.sh  release-readiness-capture-fix.sh  run-all-tests.sh  (+27 more)
src/capabilities/: meson.build  probe.zig  runtime.c  runtime.h  runtime.zig
src/capture/: command.c  command.h  command.zig  command_flags.zig  command_flags_test.zig  command_grammar.zig  command_guards.zig  command_json.zig  command_test.zig  invocation.zig  lifecycle.zig  meson.build  post_capture.zig  post_capture_json.zig  post_capture_types.zig  precondition_guard.zig  types.zig  types_test.zig  warnings.zig
src/cli/: json.c  json.h  json.zig  meson.build
src/clipboard/: clipboard.c  clipboard.h  command.zig  meson.build  provider.c  provider_handoff.c  provider_handoff.h  service.zig
src/commands/: capabilities_command.c  clipboard_command.c  commands.h  config_command.c  config_command_support.c  config_command_support.h  directory_command.c  doctor_command.c  errors_command.c  explore_command.c  history_command.c  launch_command.c  meson.build  notify_command.c  preflight_command.c  preview_command.c  settings_command.c  setup_command.c  shortcuts_command.c  support.c  support.h
src/compositor/: focused_output.c  focused_output.h  focused_output.zig  meson.build  runtime.c  runtime.h  runtime.zig
src/config/: command.zig  config.c  config.h  config.zig  loader.zig  manager.zig  meson.build  niri_keybinds.zig  niri_managed.c  niri_managed.h  niri_rule.zig  noctalia_managed.c  noctalia_managed.h  save_args.zig
src/explore/: command.zig  inventory.c  inventory.h  meson.build
src/notify/: command.zig  meson.build  request.c  request.h  request.zig
src/overlay/: all_in_one_session.zig  aspect_store.zig  capture_session.zig  gtk_overlay.py  helper_main.zig  helper_protocol.zig  hud.zig  meson.build  native_gtk_overlay.c  native_gtk_overlay.zig  overlay.zig  overlay_protocol.c  overlay_protocol.h  overlay_selection.c  overlay_selection.h  overlay_selection_session.c  overlay_selection_session.h  runtime.zig  selection_draft_store.zig  selection_session.zig  spike_main.zig  spike_probe.zig  strategy.zig  toolbar_layout.zig  toolbar_layout_test.zig  ui_state_store.zig
src/preflight/: meson.build  probe.c  probe.h  probe.zig
src/preview/: command.zig  meson.build  native_gtk_preview.c  preview_action_callbacks.c  preview_action_callbacks.h  preview_actions.c  preview_actions.h  preview_annotation_behavior.c  preview_annotation_behavior.h  preview_annotation_editor.c  preview_annotation_editor.h  preview_annotations.c  preview_annotations.h  preview_bridge.zig  preview_canvas.c  preview_canvas.h  preview_clipboard.c  preview_clipboard.h  preview_clipboard.zig  preview_commands.c  preview_commands.h  preview_document.c  preview_document.h  preview_document_edit.c  preview_document_edit.h  preview_document_test.c  preview_edit_session.c  preview_edit_session.h  preview_geometry.c  preview_geometry.h  preview_geometry.zig  preview_gesture.c  preview_gesture.h  preview_icons.c  preview_icons.h  preview_image_io.c  preview_image_io.h  preview_image_io.zig  preview_measure.c  preview_measure.h  (+26 more)
src/runtime/: c_compat.zig  capture_session_lock.c  capture_session_lock.h  capture_session_lock.zig  capture_state.c  capture_state.h  env.c  env.h  env.zig  helper_resolution.c  helper_resolution.h  helper_resolution.zig  meson.build  paths.c  paths.h  paths.zig  previous_area_store.c  previous_area_store.h  previous_area_store.zig  process_exec.c  process_exec.h  process_exec.zig  tool_lookup.c  tool_lookup.h  tool_lookup.zig
src/settings/: command.zig  meson.build  native_gtk_launcher.c  native_gtk_settings.c  settings_config.c  settings_config.h  settings_config.zig  settings_niri.c  settings_niri.h  settings_process.c  settings_process.h  settings_shortcuts.c  settings_shortcuts.h
src/shortcuts/: meson.build  niri_adapter.c  niri_adapter.h  portal_adapter.c  portal_adapter.h  provider.c  provider_core.c  provider_core.h  shortcuts.c  shortcuts.h  state.c  state.h
tests/unit/: capabilities_runtime_test.c  cli_json_test.c  clipboard_handoff_test.c  clipboard_lifecycle_test.c  compositor_focused_output_test.c  compositor_runtime_test.c  core_capture_mode_test.c  desktop_entry_test.sh  dev_noctalia_test.sh  error_taxonomy_test.c  launch_first_run_test.sh  meson.build  noctalia_managed_test.c  notify_request_test.c  overlay_selection_session_test.c  preflight_probe_test.c  preview_clipboard_test.c  preview_geometry_test.c  preview_image_io_test.c  preview_notify_test.c  preview_result_test.c  runtime_capture_session_lock_test.c  runtime_capture_state_test.c  (+11 more)
(+205 files in other folders)
