shaula_commands_c = static_library(
  'shaula-commands-c',
  [
    'support.c',
    'config_command_support.c',
    'preflight_command.c',
    'capabilities_command.c',
    'errors_command.c',
    'settings_command.c',
    'config_command.c',
    'preview_command.c',
    'directory_command.c',
    'history_command.c',
    'clipboard_command.c',
    'explore_command.c',
    'doctor_command.c',
    'setup_command.c',
    'notify_command.c',
  ],
  dependencies: [
    glib_dep,
    shaula_capabilities_runtime_dep,
    shaula_cli_json_dep,
    shaula_compositor_runtime_dep,
    shaula_config_dep,
    shaula_error_taxonomy_dep,
    shaula_explore_inventory_dep,
    shaula_notify_request_dep,
    shaula_preflight_probe_dep,
    shaula_preview_result_dep,
    shaula_runtime_dep,
    shaula_settings_config_dep,
  ],
  install: false,
)

shaula_commands_dep = declare_dependency(
  link_with: shaula_commands_c,
  dependencies: [
    glib_dep,
    shaula_capabilities_runtime_dep,
    shaula_cli_json_dep,
    shaula_compositor_runtime_dep,
    shaula_config_dep,
    shaula_error_taxonomy_dep,
    shaula_explore_inventory_dep,
    shaula_notify_request_dep,
    shaula_preflight_probe_dep,
    shaula_preview_result_dep,
    shaula_runtime_dep,
    shaula_settings_config_dep,
  ],
)
